tests-integration/fixtures/checking/1772565060_derive_functor_contravariant_error/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Predicate :: forall (@a :: Type). ((a :: Type) -> Boolean) -> Predicate (a :: Type)
Reader ::
  forall (@r :: Type) (@a :: Type). ((r :: Type) -> (a :: Type)) -> Reader (r :: Type) (a :: Type)
Cont ::
  forall (@r :: Type) (@a :: Type).
    (((a :: Type) -> (r :: Type)) -> (r :: Type)) -> Cont (r :: Type) (a :: Type)

Types
Predicate :: Type -> Type
Reader :: Type -> Type -> Type
Cont :: Type -> Type -> Type

Derived
derive Functor Predicate
derive forall (t :: Type). Functor (Reader (t :: Type))
derive forall (t :: Type). Functor (Cont (t :: Type))

Roles
Predicate = [Representational]
Reader = [Representational, Representational]
Cont = [Representational, Representational]

Diagnostics
error[ContravariantOccurrence]: Type variable occurs in contravariant position: (t :: Type)
  --> 6:1..6:34
  |
6 | derive instance Functor Predicate
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
